# polymaster

./: .dockerignore  .gitignore  ANOMALY_DETECTION.md  API_REFERENCE.md  Cargo.toml  Dockerfile  INSTALL.md  PYTHON_BOT_README.md  QUICKSTART.md  README.md  debug_settlement.py  deploy.sh  discord-bridge.js  instructions_for_ai_agent.md  kalshi-key.pem  launch.sh  package-lock.json  package.json  patch_tickers.js  pnl_tracker.py  prd.md  raw_resp.json  requirements.txt  run_alerts.sh  run_shadow.sh  schema.sql  settler.js  test_api.py  test_strategy.py  whale-db-manager.js  whale_alerts.csv  whale_alerts.db  whale_alerts.db-shm  whale_alerts.db-wal
arbi/: .env.example  CMakeLists.txt  README.md  run.sh  run_arbi.sh
arbi/.cache/clangd/index/: bregman.cpp.3A1117A522F91EE3.idx  bregman.hpp.18EAB3834B8221EF.idx  common.hpp.CEC8CAC07FA16CEB.idx  cross_exchange_execution.cpp.3FE27D4DE111FBE4.idx  cross_exchange_execution.hpp.C66847D36F21F252.idx  dependency_graph.cpp.DB1F4BC51D3D3964.idx  dependency_graph.hpp.65E8245A51FBBBBB.idx  execution.cpp.925999D57AFD0A44.idx  execution.hpp.A589CA2C308E85B6.idx  frank_wolfe.cpp.62101C38B6F10955.idx  frank_wolfe.hpp.EBF772292CDE61C1.idx  kalshi_feed.cpp.E811867B4088E29B.idx  kalshi_feed.hpp.738D615635122AAD.idx  kalshi_market_feed.cpp.47B52C1DF4C94971.idx  kalshi_market_feed.hpp.2F79E8F63AC2A882.idx  logger.cpp.80735F2D0915DD6D.idx  logger.hpp.796024F26E359C3D.idx  main.cpp.AA9AFC36A2AD6D17.idx  market_feed.cpp.01B512DA6E7964C8.idx  market_feed.hpp.0C5620DE93CD9B59.idx  polytope.cpp.80CA40C42D3A0F36.idx  polytope.hpp.7D07E9D1B53C6703.idx  test_all.cpp.B48BA32F709423E8.idx  test_dns.cpp.324401C9BBAD9C70.idx  test_ws_connectivity.cpp.BC58DBB65B0C4AB4.idx  websocket_feed.cpp.ABCAE70C40604C4D.idx  websocket_feed.hpp.F7789027B3F585DF.idx
arbi/include/arbi/: bregman.hpp  common.hpp  cross_exchange_execution.hpp  dependency_graph.hpp  execution.hpp  frank_wolfe.hpp  kalshi_feed.hpp  kalshi_market_feed.hpp  logger.hpp  market_feed.hpp  polytope.hpp  websocket_feed.hpp
arbi/scripts/: derive_api_keys.ts  package.json
arbi/src/: bregman.cpp  cross_exchange_execution.cpp  dependency_graph.cpp  execution.cpp  frank_wolfe.cpp  kalshi_feed.cpp  kalshi_market_feed.cpp  logger.cpp  main.cpp  market_feed.cpp  polytope.cpp  websocket_feed.cpp
arbi/tests/: test_all.cpp  test_dns.cpp  test_ws_connectivity.cpp
dashboard/: server.js
dashboard/public/: app.js  glass.css  index.html  style.css  trades.html
docs/: API_REFERENCE.md  README_RUST.md_backup  WEBHOOK_REFERENCE.md
docs/plans/: 2026-02-12-categories-edge-data-design.md  2026-02-13-api-improvements-design.md  2026-02-13-integration-v2-design.md
integration/: .env.example  README.md  package-lock.json  package.json  providers.json
integration/providers/: README.md  crypto.json  news.json  prediction-markets.json  sports.json  weather.json
integration/skill/: SKILL.md
integration/src/: cli.ts  index.ts  server.ts
integration/src/autopilot/: shadow-mode.ts
integration/src/providers/: fetcher.ts  free-research.ts  perplexity.ts  prediction-fetcher.ts  registry.ts
integration/src/scoring/: scorer.ts
integration/src/tools/: alerts.ts  kalshi-execution.ts  market-data.ts  status.ts
integration/src/util/: config.ts  env.ts  settlement.ts  types.ts
integration/src/watcher/: alert-store.ts  file-watcher.ts
prompts/: polymarket_arbitrage_claude_prompt.md
skills/compound/: SKILL.md
skills/predict/: SKILL.md
skills/predict_market_bot/: SKILL.md
skills/research/: SKILL.md
skills/scan/: SKILL.md
src/: aggregator.py  arbitrage.py  categories.rs  config.rs  db.rs  kalshi.rs  main.rs  orchestrator.py  polymarket.rs  scanner.py  types.rs  utils.py  whale_profile.rs
src/alerts/: display.rs  history.rs  mod.rs  webhook.rs
src/api/: __init__.py  kalshi.py  polymarket.py
src/commands/: mod.rs  positions.rs  setup.rs  status.rs  test.rs  watch.rs
src/execution/: kalshi.rs  matcher.rs  mod.rs
src/ws/: auth.rs  kalshi.rs  mod.rs
trade_logs/: shadow_trades.csv
(+12 files in other folders)
