[package]
name = "wwatcher"
version = "0.2.0"
edition = "2021"
authors = ["Neur0map"]

[[bin]]
name = "wwatcher"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
dirs = "5.0"
thiserror = "1.0"
colored = "2.1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
